--- a/config.json
+++ b/config.json
@@ -6,9 +6,9 @@
     "fb_url": "https://facebook.com",
     "tw_url": "https://twitter.com",
     "ln_url": "https://linkedin.com",
-    "gmail_user": "subha2766@gmail.com",
-    "gmail_password": "subhamunu@",
-    "admin_user": "subha@gmail.com",
-    "admin_password": "subha@123"
+    "gmail_user": "",
+    "gmail_password": "",
+    "admin_user": "",
+    "admin_password": ""
   }
 }
